<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_driver</name>
  <version>0.0.0</version>
  <description>Non-blocking asynchronous USB driver for ROS 2</description>
  <maintainer email="nick.hortovanyi@gmail.com">Nick Hortovanyi</maintainer>
  <license>Apache-2.0</license>

  <url>https://github.com/aussierobots/usb_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>libusb-1.0-dev</depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>usb_msgs</depend>
  <depend>usb_driver_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
